--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-kaggle==1.5.16
-matplotlib==3.4.3
-pandas==1.3.3
-plotly==5.1.0
-scikit_learn==0.24.2
-seaborn==0.11.2
-streamlit==1.0.0
-protobuf==3.17.3
+kaggle
+matplotlib
+pandas
+plotly
+scikit_learn
+seaborn
+streamlit
+protobuf
+altair
